Fix: findMethodsInAllHierarch to properly recurse through inheritance chain
Make the method truly recursive to handle complete inheritance hierarchies,
matching the behavior of getFieldsInAllHierarchy.
Add test coverage forfindMethodsInAllHierarch: null handling, parent class method discovery.

Signed-off-by: Emmanuel Hugonnet <ehugonne@redhat.com>